--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1"
   },
